# whisper-cpp

./: README.md  package.json
.svelte-kit/: ambient.d.ts
guide/: DEVLOG.md  RELEASE_PLAN.md  compare.html  error.md  fix1.md  models copy.md
src/: app.html
src-tauri/: Cargo.toml  setup-binaries.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  demucs.rs  downloader.rs  error.rs  ffmpeg.rs  job_manager.rs  lib.rs  main.rs  model_manager.rs  pipeline_v2.rs  post_process.rs  subtitle.rs  subtitle_sync.rs  thermal.rs  utils.rs  vad.rs  validator.rs  whisper_native copy.rs  whisper_native.rs
src/lib/: CompareTab.svelte  ModelSelector.svelte  SyncTab.svelte  invoke.ts  jobStore.ts
src/routes/: +page.svelte
