[package]
name = "auto-sub"
version = "0.1.4"
description = "AutoSub – Native macOS subtitle generator"
authors = ["thomas-sky2024"]
edition = "2021"

[lib]
name = "auto_sub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
regex = "1"
unicode-segmentation = "1"
jieba-rs = "0.6"
lazy_static = "1.4"
dirs = "5"
sha2 = "0.10"
anyhow = "1"
thiserror = "1"
sysinfo = "0.30"
log = "0.4"
env_logger = "0.11"

# Native VAD
sherpa-onnx = "1.12.34"

# Native Whisper 
whisper-rs = { version = "0.16", features = ["metal"] }

# Audio decoding in-process
hound = "3.5"

# System info & threads
num_cpus = "1.13"
